--- a/CustomViewFromXib/CustomViewFromXib/Base.lproj/Main.storyboard
+++ b/CustomViewFromXib/CustomViewFromXib/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AHT-vr-pPn" userLabel="CustomView" customClass="CustomView" customModule="CustomViewFromXib" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AHT-vr-pPn" userLabel="CustomView" customClass="CustomView" customModule="CustomViewFromXib" customModuleProvider="target">
                                 <rect key="frame" x="162" y="80" width="300" height="120"/>
                                 <color key="backgroundColor" red="0.13481432199478149" green="1" blue="0.25022006034851074" alpha="1" colorSpace="calibratedRGB"/>
                                 <userDefinedRuntimeAttributes>
@@ -24,7 +24,11 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="AHT-vr-pPn" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="60" id="GFD-p8-Rtc"/>
+                            <constraint firstAttribute="centerX" secondItem="AHT-vr-pPn" secondAttribute="centerX" constant="-12" id="HPW-jD-51M"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
