Updated for Xcode 9
Updated code to work with Swift 4 and Xcode 9.

Fixed IBOutlet crash from button senders changing.

--- a/CustomViewFromXib/CustomViewFromXib/CustomView.xib
+++ b/CustomViewFromXib/CustomViewFromXib/CustomView.xib
@@ -1,8 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomView" customModule="CustomViewFromXib" customModuleProvider="target">
@@ -17,8 +21,8 @@
             <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Custom Widget" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQb-ve-StE">
-                    <rect key="frame" x="8" y="8" width="120" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Custom Widget" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQb-ve-StE">
+                    <rect key="frame" x="8" y="8" width="119" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
@@ -26,25 +30,25 @@
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CaM-fX-QWJ">
                     <rect key="frame" x="36" y="37" width="64" height="30"/>
                     <state key="normal" title="Press Me">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                     <connections>
                         <action selector="buttonPressed:" destination="-1" eventType="touchUpInside" id="48c-aW-PTl"/>
                     </connections>
                 </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sgZ-v9-mHW">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sgZ-v9-mHW">
                     <rect key="frame" x="136" y="0.0" width="165" height="120"/>
-                    <color key="backgroundColor" red="0.90923690800000001" green="0.81068706509999999" blue="0.81462281940000003" alpha="1" colorSpace="calibratedRGB"/>
+                    <color key="backgroundColor" red="0.90923690800000001" green="0.81068706509999999" blue="0.81462281940000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="120" id="sbo-TO-Sad"/>
                         <constraint firstAttribute="width" constant="164.5" id="tEn-gq-NIp"/>
                     </constraints>
                 </imageView>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="sgZ-v9-mHW" secondAttribute="trailing" id="1SS-o0-HQu"/>
-                <constraint firstItem="sgZ-v9-mHW" firstAttribute="leading" secondItem="GQb-ve-StE" secondAttribute="trailing" constant="8" id="3EU-gy-NVO"/>
+                <constraint firstAttribute="trailing" secondItem="sgZ-v9-mHW" secondAttribute="trailing" constant="-1" id="1SS-o0-HQu"/>
+                <constraint firstItem="sgZ-v9-mHW" firstAttribute="leading" secondItem="GQb-ve-StE" secondAttribute="trailing" constant="9" id="3EU-gy-NVO"/>
                 <constraint firstItem="GQb-ve-StE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="5za-oN-r0h"/>
                 <constraint firstItem="sgZ-v9-mHW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ASD-m2-h0C"/>
                 <constraint firstItem="CaM-fX-QWJ" firstAttribute="top" secondItem="GQb-ve-StE" secondAttribute="bottom" constant="8" id="EPQ-zg-ISX"/>
