--- a/CustomViewFromXib/CustomViewFromXib/CustomView.xib
+++ b/CustomViewFromXib/CustomViewFromXib/CustomView.xib
@@ -18,47 +18,55 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="321" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Custom Widget" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQb-ve-StE">
-                    <rect key="frame" x="8" y="8" width="119" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CaM-fX-QWJ">
-                    <rect key="frame" x="36" y="37" width="64" height="30"/>
-                    <state key="normal" title="Press Me">
-                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="buttonPressed:" destination="-1" eventType="touchUpInside" id="48c-aW-PTl"/>
-                    </connections>
-                </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sgZ-v9-mHW">
-                    <rect key="frame" x="136" y="0.0" width="165" height="120"/>
-                    <color key="backgroundColor" red="0.90923690800000001" green="0.81068706509999999" blue="0.81462281940000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Wab-bU-iwp" userLabel="LeftPanel">
+                    <rect key="frame" x="0.0" y="0.0" width="156" height="120"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CaM-fX-QWJ">
+                            <rect key="frame" x="46" y="64" width="64" height="30"/>
+                            <state key="normal" title="Press Me">
+                                <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="buttonPressed:" destination="-1" eventType="touchUpInside" id="48c-aW-PTl"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Custom Widget" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQb-ve-StE">
+                            <rect key="frame" x="19" y="35" width="119" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="120" id="sbo-TO-Sad"/>
-                        <constraint firstAttribute="width" constant="164.5" id="tEn-gq-NIp"/>
+                        <constraint firstAttribute="width" constant="156" id="6MF-Td-ZhH"/>
+                        <constraint firstItem="GQb-ve-StE" firstAttribute="centerY" secondItem="Wab-bU-iwp" secondAttribute="centerY" constant="-14.5" id="8Hg-vl-h3T"/>
+                        <constraint firstItem="GQb-ve-StE" firstAttribute="centerX" secondItem="Wab-bU-iwp" secondAttribute="centerX" id="aA8-nz-RGM"/>
+                        <constraint firstItem="CaM-fX-QWJ" firstAttribute="top" secondItem="GQb-ve-StE" secondAttribute="bottom" constant="8" id="ljm-fm-WGi"/>
+                        <constraint firstItem="CaM-fX-QWJ" firstAttribute="centerX" secondItem="GQb-ve-StE" secondAttribute="centerX" id="vsg-G1-a4A"/>
                     </constraints>
+                </view>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sgZ-v9-mHW">
+                    <rect key="frame" x="156" y="0.0" width="165" height="120"/>
+                    <color key="backgroundColor" red="0.15700314940000001" green="0.16088287530000001" blue="0.1687408239" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                 </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="sgZ-v9-mHW" secondAttribute="trailing" constant="-1" id="1SS-o0-HQu"/>
-                <constraint firstItem="sgZ-v9-mHW" firstAttribute="leading" secondItem="GQb-ve-StE" secondAttribute="trailing" constant="9" id="3EU-gy-NVO"/>
-                <constraint firstItem="GQb-ve-StE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="5za-oN-r0h"/>
-                <constraint firstItem="sgZ-v9-mHW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ASD-m2-h0C"/>
-                <constraint firstItem="CaM-fX-QWJ" firstAttribute="top" secondItem="GQb-ve-StE" secondAttribute="bottom" constant="8" id="EPQ-zg-ISX"/>
-                <constraint firstItem="GQb-ve-StE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="bHz-eW-lBm"/>
-                <constraint firstAttribute="bottom" secondItem="sgZ-v9-mHW" secondAttribute="bottom" id="wSF-Op-BuJ"/>
-                <constraint firstItem="CaM-fX-QWJ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="36" id="xL8-LO-ZNc"/>
+                <constraint firstItem="Wab-bU-iwp" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="10m-Xk-TIl"/>
+                <constraint firstItem="sgZ-v9-mHW" firstAttribute="leading" secondItem="Wab-bU-iwp" secondAttribute="trailing" id="E7Q-7n-q44"/>
+                <constraint firstItem="Wab-bU-iwp" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="TkY-xS-zhI"/>
+                <constraint firstItem="sgZ-v9-mHW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="WSF-wi-kpE"/>
+                <constraint firstAttribute="trailing" secondItem="sgZ-v9-mHW" secondAttribute="trailing" id="nVY-Xg-mCR"/>
+                <constraint firstAttribute="bottom" secondItem="Wab-bU-iwp" secondAttribute="bottom" id="xJV-TR-2V3"/>
+                <constraint firstAttribute="bottom" secondItem="sgZ-v9-mHW" secondAttribute="bottom" id="xoc-zt-aeR"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="188.5" y="105"/>
+            <point key="canvasLocation" x="177.5" y="105"/>
         </view>
     </objects>
 </document>
