Changes for IBDesignable Research
Force a crash if view fails to load, programmer error should be caught
earlier. Only should fail if there is no view in the … file and the nib
loading code will probably crash first.

Exploring how to make IBDesignable work … very buggy, very frustrating.

--- a/CustomViewFromXib/CustomViewFromXib/Base.lproj/Main.storyboard
+++ b/CustomViewFromXib/CustomViewFromXib/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,24 +21,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AHT-vr-pPn" userLabel="CustomView" customClass="CustomView" customModule="CustomViewFromXib" customModuleProvider="target">
-                                <rect key="frame" x="38" y="69" width="299.5" height="120"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AHT-vr-pPn" userLabel="CustomView" customClass="CustomView" customModule="CustomViewFromXib" customModuleProvider="target">
+                                <rect key="frame" x="38" y="69" width="271" height="103"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.13481432199478149" green="1" blue="0.25022006034851074" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="headerTitle" value="Test this title thing"/>
                                     <userDefinedRuntimeAttribute type="image" keyPath="image" value="Row.jpg"/>
+                                </userDefinedRuntimeAttributes>
+                            </view>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Fdc-ag-FRA" userLabel="CustomView" customClass="CustomView" customModule="CustomViewFromXib" customModuleProvider="target">
+                                <rect key="frame" x="37" y="303" width="272" height="119"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.13481432199999999" green="1" blue="0.25022006029999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="image" value="Row.jpg"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="headerTitle" value="TWO"/>
+                                    <userDefinedRuntimeAttribute type="string" keyPath="buttonTitle" value="SOMETHING"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" red="0.66666668653488159" green="0.66666668653488159" blue="0.66666668653488159" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="AHT-vr-pPn" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="49" id="GFD-p8-Rtc"/>
-                            <constraint firstAttribute="centerX" secondItem="AHT-vr-pPn" secondAttribute="centerX" constant="-0.25" id="HPW-jD-51M"/>
-                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="399" y="140"/>
+            <point key="canvasLocation" x="397.60000000000002" y="139.880059970015"/>
         </scene>
     </scenes>
     <resources>
