--- a/CustomViewFromXib/CustomViewFromXib/CustomView.xib
+++ b/CustomViewFromXib/CustomViewFromXib/CustomView.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -21,44 +21,56 @@
             <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Custom Widget" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQb-ve-StE">
-                    <rect key="frame" x="8" y="8" width="119" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CaM-fX-QWJ">
-                    <rect key="frame" x="36" y="37" width="64" height="30"/>
-                    <state key="normal" title="Press Me">
-                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="buttonPressed:" destination="-1" eventType="touchUpInside" id="48c-aW-PTl"/>
-                    </connections>
-                </button>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sgZ-v9-mHW">
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sgZ-v9-mHW">
                     <rect key="frame" x="136" y="0.0" width="165" height="120"/>
                     <color key="backgroundColor" red="0.90923690800000001" green="0.81068706509999999" blue="0.81462281940000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="120" id="sbo-TO-Sad"/>
-                        <constraint firstAttribute="width" constant="164.5" id="tEn-gq-NIp"/>
+                        <constraint firstAttribute="height" constant="120" id="q84-Q8-DPn"/>
+                        <constraint firstAttribute="width" constant="165" id="uFF-Tj-OwL"/>
                     </constraints>
                 </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n3B-wI-NyY" userLabel="LeftView">
+                    <rect key="frame" x="0.0" y="0.0" width="138" height="120"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CaM-fX-QWJ">
+                            <rect key="frame" x="37" y="45" width="64" height="30"/>
+                            <state key="normal" title="Press Me">
+                                <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="buttonPressed:" destination="-1" eventType="touchUpInside" id="48c-aW-PTl"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" text="Custom Widget" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GQb-ve-StE">
+                            <rect key="frame" x="10" y="8" width="119" height="21"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="CaM-fX-QWJ" firstAttribute="centerX" secondItem="n3B-wI-NyY" secondAttribute="centerX" id="1K2-BY-sa1"/>
+                        <constraint firstAttribute="width" constant="138" id="Rfu-jJ-ji1"/>
+                        <constraint firstItem="GQb-ve-StE" firstAttribute="centerX" secondItem="n3B-wI-NyY" secondAttribute="centerX" id="VtD-SC-IMD"/>
+                        <constraint firstItem="GQb-ve-StE" firstAttribute="top" secondItem="n3B-wI-NyY" secondAttribute="top" constant="8" id="ZKb-2G-8Tj"/>
+                        <constraint firstItem="CaM-fX-QWJ" firstAttribute="top" secondItem="GQb-ve-StE" secondAttribute="bottom" constant="16" id="gq7-UF-xMQ"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="sgZ-v9-mHW" secondAttribute="trailing" constant="-1" id="1SS-o0-HQu"/>
-                <constraint firstItem="sgZ-v9-mHW" firstAttribute="leading" secondItem="GQb-ve-StE" secondAttribute="trailing" constant="9" id="3EU-gy-NVO"/>
-                <constraint firstItem="GQb-ve-StE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="8" id="5za-oN-r0h"/>
                 <constraint firstItem="sgZ-v9-mHW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="ASD-m2-h0C"/>
-                <constraint firstItem="CaM-fX-QWJ" firstAttribute="top" secondItem="GQb-ve-StE" secondAttribute="bottom" constant="8" id="EPQ-zg-ISX"/>
-                <constraint firstItem="GQb-ve-StE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="bHz-eW-lBm"/>
+                <constraint firstItem="n3B-wI-NyY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Fxo-yd-yfn"/>
+                <constraint firstItem="sgZ-v9-mHW" firstAttribute="leading" secondItem="n3B-wI-NyY" secondAttribute="trailing" constant="-2" id="Vb8-50-1ir"/>
+                <constraint firstAttribute="bottom" secondItem="n3B-wI-NyY" secondAttribute="bottom" id="r3L-ie-R0t"/>
                 <constraint firstAttribute="bottom" secondItem="sgZ-v9-mHW" secondAttribute="bottom" id="wSF-Op-BuJ"/>
-                <constraint firstItem="CaM-fX-QWJ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="36" id="xL8-LO-ZNc"/>
+                <constraint firstItem="n3B-wI-NyY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="zVW-NR-wVw"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="188.5" y="105"/>
+            <point key="canvasLocation" x="188" y="105"/>
         </view>
     </objects>
 </document>
